After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726369 - gnome-terminal crashes when closing a window
gnome-terminal crashes when closing a window
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.11.x
Other Linux
: Normal major
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-03-14 19:51 UTC by Mantas Mikulėnas (grawity)
Modified: 2014-03-19 12:25 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mantas Mikulėnas (grawity) 2014-03-14 19:51:14 UTC
When I open multiple terminal windows and close one of them, `gnome-terminal-server` crashes, taking down all other terminal windows. I don't know if it is a gtk+ bug or a gnome-terminal bug, but it started happening after this gtk+ commit:

commit 66fae0330c5cdb68f50699ff2645ff0cf112911e
Author: Benjamin Otte <otte@redhat.com>
Date:   Fri Mar 7 21:45:18 2014 +0100

    a11y: Don't use signals
    
    Instead, call functions directly. Fixes the fact that the signals
    weren't disconnected even when the accessible was destroyed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=725733

gtk3 3.11.8-59-g66fae03 (bad)
gtk3 3.11.8-58-g1ff2161 (good)
gnome-terminal 3.11.3-58-g829d3ed
vte3 0.35.2-3-gbe8407d

Backtrace:

Program terminated with signal SIGSEGV, Segmentation fault.
  • #0 g_type_check_instance_cast
    at gtype.c line 4002
  • #0 g_type_check_instance_cast
    at gtype.c line 4002
  • #1 gtk_container_remove
    at gtkcontainer.c line 1591
  • #2 _g_closure_invoke_va
    at gclosure.c line 831
  • #3 g_signal_emit_valist
    at gsignal.c line 3215
  • #4 g_signal_emit
    at gsignal.c line 3363
  • #5 g_closure_invoke
    at gclosure.c line 768
  • #6 signal_emit_unlocked_R
    at gsignal.c line 3589
  • #7 g_signal_emit_valist
    at gsignal.c line 3307
  • #8 g_signal_emit_by_name
    at gsignal.c line 3403
  • #9 vte_terminal_emit_child_exited
    at vte.c line 871
  • #10 vte_terminal_catch_child_exited
    at vte.c line 3524
  • #11 g_closure_invoke
    at gclosure.c line 768
  • #12 signal_emit_unlocked_R
    at gsignal.c line 3551
  • #13 g_signal_emit_valist
    at gsignal.c line 3307
  • #14 g_signal_emit_by_name
    at gsignal.c line 3403
  • #15 vte_reaper_child_watch_cb
    at reaper.c line 49
  • #16 g_child_watch_dispatch
    at gmain.c line 5150
  • #17 g_main_dispatch
    at gmain.c line 3112
  • #18 g_main_context_dispatch
    at gmain.c line 3711
  • #19 g_main_context_iterate
    at gmain.c line 3782
  • #20 g_main_context_iteration
    at gmain.c line 3843
  • #21 g_application_run
    at gapplication.c line 2114
  • #22 main
    at server.c line 139